--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "charming": "^3.0.1",
     "gsap": "^2.1.2",
+    "lottie-web": "^5.5.9",
+    "paper": "^0.12.3",
+    "parallax-js": "^3.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "simplex-noise": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
